--- a/JLCSV.ipynb
+++ b/JLCSV.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 1,
    "id": "76076424",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "id": "cccea049",
    "metadata": {},
    "outputs": [],
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 3,
    "id": "463df059",
    "metadata": {},
    "outputs": [],
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 4,
    "id": "95e29721",
    "metadata": {},
    "outputs": [
@@ -310,7 +310,7 @@
        "16  This must be the perfect supplier - No bleats ...    \"6 years ago\""
       ]
      },
-     "execution_count": 178,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 5,
    "id": "e5f2d48a",
    "metadata": {},
    "outputs": [],
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 21,
    "id": "ccd4117a",
    "metadata": {
     "scrolled": true
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 22,
    "id": "0e6d3e70",
    "metadata": {},
    "outputs": [],
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 24,
    "id": "80127cd0",
    "metadata": {},
    "outputs": [
@@ -400,13 +400,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "after ordering the broadband i had to call them just before the start of service to ask for a router. apparently it had been forgotten to be sent out. one minute after asking for the router i received an e-mail stating my broadband order had been cancelled. nobody could tell me why this had happened and i had to wait 5 days before anyone contacted me. when they did they just said they didnâ€™t know why it was cancelled and that i woud have to start the order again from the start. apart from â€˜iâ€™m sorryâ€™ there was no offer of compensation or anything. i had to beg my previous provider not to terminate my broadband/phone. not recommended! i wish i had read these reviews before wasting my time. very disappointed that john lewis are treating their customers in this way.\n",
-      "Sentiment(polarity=-0.37777777777777777, subjectivity=0.49722222222222223)\n"
+      "poor internet phone line went down a few times\n",
+      "Sentiment(polarity=-0.2518518518518518, subjectivity=0.3296296296296296)\n"
      ]
     }
    ],
    "source": [
-    "review = comments[14][0].lower()\n",
+    "review = comments[4][0].lower()\n",
     "print (review)\n",
     "blob = TextBlob(review)\n",
     "sentiment = blob.sentiment\n",
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 9,
    "id": "29c5e9b6",
    "metadata": {},
    "outputs": [],
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 10,
    "id": "4a0aa6cd",
    "metadata": {},
    "outputs": [
@@ -442,7 +442,7 @@
        "<function matplotlib.pyplot.show(close=None, block=None)>"
       ]
      },
-     "execution_count": 184,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -473,20 +473,204 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "5f886cd4",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'subjectivities' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mC:\\Users\\THOMAS~1.SCA\\AppData\\Local\\Temp/ipykernel_15900/2428195673.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdata\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;34m\"Subjectivity\"\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msubjectivities\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mdata\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;34m\"Polarity\"\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpolarities\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mfull_data\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mfull_data\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'subjectivities' is not defined"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Review</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Subjectivity</th>\n",
+       "      <th>Polarity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>I am currently a plusnet broadband customer wh...</td>\n",
+       "      <td>\"2 months ago\"</td>\n",
+       "      <td>0.487948</td>\n",
+       "      <td>0.225551</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Avoid. Avoid. Avoid. First John Lewis Broadban...</td>\n",
+       "      <td>\"8 months ago\"</td>\n",
+       "      <td>0.290320</td>\n",
+       "      <td>-0.023737</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>They've taken my money and won't refund. I can...</td>\n",
+       "      <td>\"8 months ago\"</td>\n",
+       "      <td>0.348333</td>\n",
+       "      <td>0.078333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>I ordered broadband with telephone for a recen...</td>\n",
+       "      <td>\"1 year ago\"</td>\n",
+       "      <td>0.434722</td>\n",
+       "      <td>0.041667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Poor internet phone line went down a few times</td>\n",
+       "      <td>\"1 year ago\"</td>\n",
+       "      <td>0.329630</td>\n",
+       "      <td>-0.251852</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>I ordered broadband 5 weeks ago still not hear...</td>\n",
+       "      <td>\"1 year ago\"</td>\n",
+       "      <td>0.550000</td>\n",
+       "      <td>-0.283333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Have waited 3 weeks since I applied for John L...</td>\n",
+       "      <td>\"1 year ago\"</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>-0.287879</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>If I could give zero or negative ratings I wou...</td>\n",
+       "      <td>\"1 year ago\"</td>\n",
+       "      <td>0.400000</td>\n",
+       "      <td>-0.375000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>John Lewis broadband deserve a positive review...</td>\n",
+       "      <td>\"2 years ago\"</td>\n",
+       "      <td>0.272727</td>\n",
+       "      <td>0.113636</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Avoid. Avoid. Avoid.\\n\\nThe worst broadband qu...</td>\n",
+       "      <td>\"2 years ago\"</td>\n",
+       "      <td>0.426923</td>\n",
+       "      <td>-0.171154</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Not only my go live date was delayed but once ...</td>\n",
+       "      <td>\"2 years ago\"</td>\n",
+       "      <td>0.551620</td>\n",
+       "      <td>0.104930</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Never try their broadband. They use a cheap ro...</td>\n",
+       "      <td>\"2 years ago\"</td>\n",
+       "      <td>0.355769</td>\n",
+       "      <td>-0.015865</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Poor service been with them a year almost and ...</td>\n",
+       "      <td>\"2 years ago\"</td>\n",
+       "      <td>0.454321</td>\n",
+       "      <td>-0.231173</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>In short don't use them.\\nOur phone line and i...</td>\n",
+       "      <td>\"2 years ago\"</td>\n",
+       "      <td>0.459013</td>\n",
+       "      <td>-0.102020</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>After ordering the broadband I had to call the...</td>\n",
+       "      <td>\"3 years ago\"</td>\n",
+       "      <td>0.497222</td>\n",
+       "      <td>-0.377778</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Their broadband is operated by Plusnet who are...</td>\n",
+       "      <td>\"4 years ago\"</td>\n",
+       "      <td>0.550000</td>\n",
+       "      <td>0.400000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>This must be the perfect supplier - No bleats ...</td>\n",
+       "      <td>\"6 years ago\"</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                               Review             Date  \\\n",
+       "0   I am currently a plusnet broadband customer wh...   \"2 months ago\"   \n",
+       "1   Avoid. Avoid. Avoid. First John Lewis Broadban...   \"8 months ago\"   \n",
+       "2   They've taken my money and won't refund. I can...   \"8 months ago\"   \n",
+       "3   I ordered broadband with telephone for a recen...     \"1 year ago\"   \n",
+       "4      Poor internet phone line went down a few times     \"1 year ago\"   \n",
+       "5   I ordered broadband 5 weeks ago still not hear...     \"1 year ago\"   \n",
+       "6   Have waited 3 weeks since I applied for John L...     \"1 year ago\"   \n",
+       "7   If I could give zero or negative ratings I wou...     \"1 year ago\"   \n",
+       "8   John Lewis broadband deserve a positive review...    \"2 years ago\"   \n",
+       "9   Avoid. Avoid. Avoid.\\n\\nThe worst broadband qu...    \"2 years ago\"   \n",
+       "10  Not only my go live date was delayed but once ...    \"2 years ago\"   \n",
+       "11  Never try their broadband. They use a cheap ro...    \"2 years ago\"   \n",
+       "12  Poor service been with them a year almost and ...    \"2 years ago\"   \n",
+       "13  In short don't use them.\\nOur phone line and i...    \"2 years ago\"   \n",
+       "14  After ordering the broadband I had to call the...    \"3 years ago\"   \n",
+       "15  Their broadband is operated by Plusnet who are...    \"4 years ago\"   \n",
+       "16  This must be the perfect supplier - No bleats ...    \"6 years ago\"   \n",
+       "\n",
+       "    Subjectivity  Polarity  \n",
+       "0       0.487948  0.225551  \n",
+       "1       0.290320 -0.023737  \n",
+       "2       0.348333  0.078333  \n",
+       "3       0.434722  0.041667  \n",
+       "4       0.329630 -0.251852  \n",
+       "5       0.550000 -0.283333  \n",
+       "6       0.500000 -0.287879  \n",
+       "7       0.400000 -0.375000  \n",
+       "8       0.272727  0.113636  \n",
+       "9       0.426923 -0.171154  \n",
+       "10      0.551620  0.104930  \n",
+       "11      0.355769 -0.015865  \n",
+       "12      0.454321 -0.231173  \n",
+       "13      0.459013 -0.102020  \n",
+       "14      0.497222 -0.377778  \n",
+       "15      0.550000  0.400000  \n",
+       "16      1.000000  1.000000  "
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -498,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 12,
    "id": "5ddf5a40",
    "metadata": {},
    "outputs": [
@@ -729,7 +913,7 @@
        "16      1.000000  1.000000  1.000000  John Lewis  "
       ]
      },
-     "execution_count": 219,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -743,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 13,
    "id": "42a8e663",
    "metadata": {},
    "outputs": [
@@ -769,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 14,
    "id": "b18aaf4c",
    "metadata": {},
    "outputs": [],
@@ -787,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 15,
    "id": "b152c70f",
    "metadata": {},
    "outputs": [
@@ -1018,7 +1202,7 @@
        "16      1.000000  1.000000  1.000000  John Lewis  "
       ]
      },
-     "execution_count": 220,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1040,7 +1224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 16,
    "id": "7a7c95b5",
    "metadata": {},
    "outputs": [
@@ -1077,7 +1261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 17,
    "id": "9500de47",
    "metadata": {},
    "outputs": [],
@@ -1087,7 +1271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 18,
    "id": "54571da9",
    "metadata": {},
    "outputs": [
@@ -1113,7 +1297,7 @@
        "<AxesSubplot:xlabel='Samples', ylabel='Counts'>"
       ]
      },
-     "execution_count": 233,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
